[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "santa22"
version = "0.0.0"
authors = [
  { name="Koukyosyumei" },
]
description = "A package for santa2022 competition"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "pandas",
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100
